[gd_scene load_steps=7 format=2]

[ext_resource path="res://House/Scripts/PresenteSpot.gd" type="Script" id=1]
[ext_resource path="res://House/Sprites/arvore.png" type="Texture" id=2]
[ext_resource path="res://House/Sprites/FBtn.png" type="Texture" id=3]
[ext_resource path="res://House/Sprites/progress_under.png" type="Texture" id=4]
[ext_resource path="res://House/Sprites/progress_fill.png" type="Texture" id=5]






[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 48, 16 )

[node name="PresenteSpot" type="Node2D"]

script = ExtResource( 1 )

[node name="arvore" type="Sprite" parent="." index="0"]

position = Vector2( 0, -16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="1"]

position = Vector2( 0, 16 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="UI" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="FBtn" type="Sprite" parent="UI" index="0"]

visible = false
position = Vector2( 9.02502, -119.878 )
scale = Vector2( 0.75, 0.75 )
z_index = 10
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Progress" type="TextureProgress" parent="UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -56.0
margin_top = -129.0
margin_right = 59.0
margin_bottom = -89.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = ExtResource( 4 )
texture_over = null
texture_progress = ExtResource( 5 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false

[node name="Label" type="Label" parent="UI/Progress" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "100s"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


